# release-automation

./: pyproject.toml
.github/workflows/: publish.yml  pypi.yml
src/idaesplus_release_automation/: __init__.py
